Solve spacing bug

--- a/src/index.css
+++ b/src/index.css
@@ -78,27 +78,30 @@ p {
 
 /* Style the individual pages */
 .home-page {
-  margin: 0 20px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   color: white;
+  max-width: 750px;
+  
 }
 
 
 .projects-page {
   text-align: center;
-  margin: 150px 50px 250px 50px;
-  background-color: rgba(0, 0, 0, 0.233);
+  margin: 150px auto 250px auto;
   color: white;
+  max-width: 750px;
 }
 
 .about-page, .contact-page {
-  margin: 150px 50px;
+  margin: 150px auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   color: white;
+  max-width: 750px;
 }
 
 .about-page h2, .contact-page h2 {
@@ -229,3 +232,4 @@ a:hover {
   flex: 1;
   color: white;
 }
+
